--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
     <header>
         <div class="wrapper__logo">
             <a href="/">
-                <img class="logo" src="assets/img/logo.svg" alt="">
-            </a>
-            <a href="">
-                <img class="logo pl-3" src="assets/img/mail.svg" alt="">
+                <img class="logo" src="assets/img/stem-logo.svg" alt="">
+                <span>Stem Academy</span>
             </a>
         </div>
     </header>
@@ -191,7 +189,7 @@
                                             <img src="assets/img/gradient.svg" class="second__icon" alt="">
                                             <img src="assets/img/icon_2.svg" class="fac__icon" alt="">
                                         </div>
-                                        <div class="fac__name" style="line-height: 52px;">
+                                        <div class="fac__name">
                                             Веб-разработка
                                         </div>
                                     </div>
@@ -260,7 +258,7 @@
                                             <img src="assets/img/gradient.svg" class="second__icon" alt="">
                                             <img src="assets/img/icon_5.svg" class="fac__icon" alt="">
                                         </div>
-                                        <div class="fac__name" style="line-height: 52px;">
+                                        <div class="fac__name">
                                             Тестирование ПО
                                         </div>
                                     </div>
@@ -329,7 +327,7 @@
                                             <img src="assets/img/gradient.svg" class="second__icon" alt="">
                                             <img src="assets/img/icon_8.svg" class="fac__icon" alt="">
                                         </div>
-                                        <div class="fac__name" style="line-height: 52px;">
+                                        <div class="fac__name">
                                             Разработка на Python
                                         </div>
                                     </div>
@@ -421,7 +419,7 @@
                                             <img src="assets/img/gradient.svg" class="second__icon" alt="">
                                             <img src="assets/img/icon__12.svg" class="fac__icon" alt="">
                                         </div>
-                                        <div class="fac__name" style="line-height: 52px;">
+                                        <div class="fac__name">
                                             Разработка на Java
                                         </div>
                                     </div>
@@ -467,7 +465,7 @@
                                             <img src="assets/img/gradient.svg" class="second__icon" alt="">
                                             <img src="assets/img/icon_14.svg" class="fac__icon" alt="">
                                         </div>
-                                        <div class="fac__name" style="line-height: 52px;">
+                                        <div class="fac__name">
                                             Разработка на Go
                                         </div>
                                     </div>
