--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="format-detection" content="telephone=no">
-    <title>GeekBrains | Направление програмирование</title>
+    <title>StemAcademy | Направление програмирование</title>
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -21,20 +21,21 @@
         <div class="wrapper__logo">
             <a href="/">
                 <img class="logo" src="assets/img/stem-logo.svg" alt="">
-                <span>Stem Academy</span>
+                <span>StemAcademy</span>
             </a>
         </div>
     </header>
     <section class="first">
         <div class="canvBox">
-            <canvas class="myCanvas" style="left: 0;top: 0;" width="1285" height="560"></canvas>
-        </div>
-        <div class="wrapper__main">
-            <div class="first__content">
-                <div class="hero_1" style="margin-bottom: 64px;">
-                    Станьте программистом и откройте для себя более 20 000 вакансий по всей России
+            <canvas class="myCanvas" style="left: 0;top: 0;" width="1285" height="560"></canvas>\
+
+            <div class="wrapper__main">
+                <div class="first__content">
+                    <div class="hero_1" style="margin-bottom: 64px;">
+                        Станьте программистом и откройте для себя более 20 000 вакансий по всей России
+                    </div>
+                    <a href="#tabs" class="button button-w">Выбрать курс</a>
                 </div>
-                <a href="#tabs" class="button button-w">Выбрать курс</a>
             </div>
 
         </div>
@@ -490,77 +491,62 @@
                         <a href="" class="professional__card">
                             <div class="event__container__content headline">Машинное обучение</div>
                             <div class="div__sale__card">Скидка 40%</div>
-                            <span class="professional__card__after"></span>
                         </a>
                         <a href="" class="professional__card">
                             <div class="event__container__content headline">Веб-разработчик</div>
                             <div class="div__sale__card">Скидка 40%</div>
-                            <span class="professional__card__after"></span>
                         </a>
                         <a href="" class="professional__card">
                             <div class="event__container__content headline">Программист Python</div>
                             <div class="div__sale__card">Скидка 40%</div>
-                            <span class="professional__card__after"></span>
                         </a>
                         <a href="" class="professional__card">
                             <div class="event__container__content headline">Frontend-разработчик</div>
                             <div class="div__sale__card">Скидка 40%</div>
-                            <span class="professional__card__after"></span>
                         </a>
                         <a href="" class="professional__card">
                             <div class="event__container__content headline">JavaScript-разработчик</div>
                             <div class="div__sale__card">Скидка 40%</div>
-                            <span class="professional__card__after"></span>
                         </a>
                         <a href="" class="professional__card">
                             <div class="event__container__content headline">Программист PHP</div>
                             <div class="div__sale__card">Скидка 40%</div>
-                            <span class="professional__card__after"></span>
                         </a>
                         <a href="" class="professional__card">
                             <div class="event__container__content headline">Программист Java</div>
                             <div class="div__sale__card">Скидка 40%</div>
-                            <span class="professional__card__after"></span>
                         </a>
                         <a href="" class="professional__card">
                             <div class="event__container__content headline">Программист iOS</div>
                             <div class="div__sale__card">Скидка 40%</div>
-                            <span class="professional__card__after"></span>
                         </a>
                         <a href="" class="professional__card">
                             <div class="event__container__content headline">Программист Android</div>
                             <div class="div__sale__card">Скидка 40%</div>
-                            <span class="professional__card__after"></span>
                         </a>
                         <a href="" class="professional__card">
                             <div class="event__container__content headline">Программист C#</div>
                             <div class="div__sale__card">Скидка 40%</div>
-                            <span class="professional__card__after"></span>
                         </a>
                         <a href="" class="professional__card">
                             <div class="event__container__content headline">Программист C++</div>
                             <div class="div__sale__card">Скидка 40%</div>
-                            <span class="professional__card__after"></span>
                         </a>
                         <a href="" class="professional__card">
                             <div class="event__container__content headline">Разработчик игр на Unity</div>
                             <div class="div__sale__card">Скидка 40%</div>
-                            <span class="professional__card__after"></span>
                         </a>
                         <a href="" class="professional__card">
                             <div class="event__container__content headline">Тестировщик ПО</div>
                             <div class="div__sale__card">Скидка 40%</div>
-                            <span class="professional__card__after"></span>
                         </a>
                         <a href="" class="professional__card">
                             <div class="event__container__content headline headache">Специалист по информационной безопасности</div>
                             <div class="div__sale__card">Скидка 40%</div>
-                            <span class="professional__card__after"></span>
                         </a>
                         <a href="" class="professional__card">
                             <div class="event__container__content headline">Системный администратор</div>
                             <div class="div__sale__card">Скидка 40%</div>
-                            <span class="professional__card__after"></span>
                         </a>
                     </div>
                     <div class="product__category">
@@ -571,60 +557,60 @@
                     </div>
                     <div class="row cards__section ml-0 mr-0">
                         <div class="col-md-6 pl-0 pr-0">
-                            <a href="" class="fac__cards__second odds">
+                            <a href="" class="cards  fac__cards__second odds">
                                 <div class="fac__cards__content">
                                     <div class="fac__names second">Разработка игр на Unity</div>
                                     <div class="fac__description">Разработка 3D-игры с нуля: от сюжет, дизайн, механику до реализации.</div>
                                 </div>
-                                <div class="arrow" style="top: 92px;right: 92px;z-index:99;">
+                                <div class="arrow">
                                     <img src="assets/img/arrow.svg" alt="">
                                 </div>
                                 <img src="assets/img/unity.png" class="image__27" alt="">
                             </a>
                         </div>
                         <div class="col-md-6 pl-0 pr-0">
-                            <a href="" class="fac__cards__second python not__odd">
+                            <a href="" class="cards fac__cards__second python not__odd">
                                 <div class="fac__cards__content">
                                     <div class="fac__names second" style="line-height: 32px;">Программирование<br>на Python</div>
                                     <div class="fac__description">Освоите основы программирования и напишете свой первый сайт на Python.</div>
                                 </div>
-                                <div class="arrow" style="top: 92px;right: 92px;z-index:99;">
+                                <div class="arrow">
                                     <img src="assets/img/arrow.svg" style="width: 100%;" alt="">
                                 </div>
                                 <img src="assets/img/python_course.png" class="image__27" alt="">
                             </a>
                         </div>
                         <div class="col-md-6 pl-0 pr-0">
-                            <a href="" class="fac__cards__second java odds">
+                            <a href="" class="cards fac__cards__second java odds">
                                 <div class="fac__cards__content">
                                     <div class="fac__names second">Игры на Java</div>
                                     <div class="fac__description">Разработка 2D-игры с нуля: от идеи, сюжета до реализации.</div>
                                 </div>
-                                <div class="arrow" style="top: 92px;right: 92px;z-index:99;">
+                                <div class="arrow">
                                     <img src="assets/img/arrow.svg" alt="">
                                 </div>
                                 <img src="assets/img/java_course.png" class="image__27" alt="">
                             </a>
                         </div>
                         <div class="col-md-6 pl-0 pr-0">
-                            <a href="" class="fac__cards__second web not__odd">
+                            <a href="" class="cards fac__cards__second web not__odd">
                                 <div class="fac__cards__content">
                                     <div class="fac__names second">Веб-разработка</div>
                                     <div class="fac__description">Разработка сайта о игре, супергерое, музыканте или о чем угодно.</div>
                                 </div>
-                                <div class="arrow" style="top: 92px;right: 92px;z-index:99;">
+                                <div class="arrow">
                                     <img src="assets/img/arrow.svg" alt="">
                                 </div>
                                 <img src="assets/img/web_course.png" class="image__27" alt="">
                             </a>
                         </div>
                         <div class="col-md-6 pl-0 pr-0">
-                            <a href="" class="fac__cards__second cyber odds" style="overflow: hidden;">
+                            <a href="" class="cards fac__cards__second cyber odds" style="overflow: hidden;">
                                 <div class="fac__cards__content" style="width:65%;z-index: 99">
                                     <div class="fac__names second">Кибербезопасность </div>
                                     <div class="fac__description">Основы IT-безопасности, предотвращение угроз и поиск уязвимостей.</div>
                                 </div>
-                                <div class="arrow" style="top: 92px;right: 92px;z-index:99;">
+                                <div class="arrow">
                                     <img src="assets/img/arrow.svg" alt="">
                                 </div>
                                 <img src="assets/img/cyber.png" sizes="(max-width: 479px) 50vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" class="image__27" style="right: -8%;max-width: 50%;overflow: hidden" alt="">
