--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <div class="wrapper__logo">
+        <div class="wrapper wrapper__logo">
             <a href="/">
                 <img class="logo" src="assets/img/stem-logo.svg" alt="">
                 <span>StemAcademy</span>
@@ -487,7 +487,7 @@
                             <span style="color: #9c9fb0;">Получить знания и сменить квалификацию на коротких курсах.</span>
                         </div>
                     </div>
-                    <div class="event__container" style="margin-bottom: 120px;">
+                    <div class="event__container">
                         <a href="" class="professional__card">
                             <div class="event__container__content headline">Машинное обучение</div>
                             <div class="div__sale__card">Скидка 40%</div>
@@ -557,7 +557,7 @@
                     </div>
                     <div class="row cards__section ml-0 mr-0">
                         <div class="col-md-6 pl-0 pr-0">
-                            <a href="" class="cards  fac__cards__second odds">
+                            <a href="" class="fac__cards__second odds">
                                 <div class="fac__cards__content">
                                     <div class="fac__names second">Разработка игр на Unity</div>
                                     <div class="fac__description">Разработка 3D-игры с нуля: от сюжет, дизайн, механику до реализации.</div>
@@ -569,7 +569,7 @@
                             </a>
                         </div>
                         <div class="col-md-6 pl-0 pr-0">
-                            <a href="" class="cards fac__cards__second python not__odd">
+                            <a href="" class="fac__cards__second python not__odd">
                                 <div class="fac__cards__content">
                                     <div class="fac__names second" style="line-height: 32px;">Программирование<br>на Python</div>
                                     <div class="fac__description">Освоите основы программирования и напишете свой первый сайт на Python.</div>
@@ -581,7 +581,7 @@
                             </a>
                         </div>
                         <div class="col-md-6 pl-0 pr-0">
-                            <a href="" class="cards fac__cards__second java odds">
+                            <a href="" class="fac__cards__second java odds">
                                 <div class="fac__cards__content">
                                     <div class="fac__names second">Игры на Java</div>
                                     <div class="fac__description">Разработка 2D-игры с нуля: от идеи, сюжета до реализации.</div>
@@ -593,7 +593,7 @@
                             </a>
                         </div>
                         <div class="col-md-6 pl-0 pr-0">
-                            <a href="" class="cards fac__cards__second web not__odd">
+                            <a href="" class="fac__cards__second web not__odd">
                                 <div class="fac__cards__content">
                                     <div class="fac__names second">Веб-разработка</div>
                                     <div class="fac__description">Разработка сайта о игре, супергерое, музыканте или о чем угодно.</div>
@@ -605,7 +605,7 @@
                             </a>
                         </div>
                         <div class="col-md-6 pl-0 pr-0">
-                            <a href="" class="cards fac__cards__second cyber odds" style="overflow: hidden;">
+                            <a href="" class="fac__cards__second cyber odds" style="overflow: hidden;">
                                 <div class="fac__cards__content" style="width:65%;z-index: 99">
                                     <div class="fac__names second">Кибербезопасность </div>
                                     <div class="fac__description">Основы IT-безопасности, предотвращение угроз и поиск уязвимостей.</div>
